Update lists at 20251107-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,7 +119,6 @@ allow 125.212.241.131;
 allow 125.253.56.119;
 allow 128.127.180.156;
 allow 128.31.0.13;
-allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 131.72.79.38;
@@ -210,7 +209,6 @@ allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
-allow 178.17.170.218;
 allow 178.17.170.221;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -501,6 +499,8 @@ allow 190.123.46.170;
 allow 190.211.254.185;
 allow 190.211.254.97;
 allow 192.108.48.150;
+allow 192.121.44.26;
+allow 192.121.44.27;
 allow 192.159.99.162;
 allow 192.159.99.168;
 allow 192.159.99.74;
@@ -918,6 +918,7 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1096,7 +1097,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
-allow 2a00:1dc0:caff:13a::9d2c;
 allow 2a00:1dc0:caff:13b::b74d;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
@@ -1209,6 +1209,8 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
+allow 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
+allow 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:80:1270::;
@@ -1545,6 +1547,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1791,7 +1794,6 @@ allow 84.239.46.144;
 allow 85.208.139.110;
 allow 85.93.218.204;
 allow 85.93.31.31;
-allow 86.107.101.234;
 allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
