--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -119,7 +119,6 @@ deny 125.212.241.131;
 deny 125.253.56.119;
 deny 128.127.180.156;
 deny 128.31.0.13;
-deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
 deny 131.72.79.38;
@@ -210,7 +209,6 @@ deny 176.65.149.96;
 deny 176.97.114.202;
 deny 177.93.140.66;
 deny 178.17.170.144;
-deny 178.17.170.218;
 deny 178.17.170.221;
 deny 178.17.170.23;
 deny 178.17.171.102;
@@ -501,6 +499,8 @@ deny 190.123.46.170;
 deny 190.211.254.185;
 deny 190.211.254.97;
 deny 192.108.48.150;
+deny 192.121.44.26;
+deny 192.121.44.27;
 deny 192.159.99.162;
 deny 192.159.99.168;
 deny 192.159.99.74;
@@ -918,6 +918,7 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1096,7 +1097,6 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
-deny 2a00:1dc0:caff:13a::9d2c;
 deny 2a00:1dc0:caff:13b::b74d;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
@@ -1209,6 +1209,8 @@ deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
+deny 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
+deny 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:80:1270::;
@@ -1545,6 +1547,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1791,7 +1794,6 @@ deny 84.239.46.144;
 deny 85.208.139.110;
 deny 85.93.218.204;
 deny 85.93.31.31;
-deny 86.107.101.234;
 deny 86.54.28.49;
 deny 87.118.110.27;
 deny 87.118.116.103;
