--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -119,7 +119,6 @@ set_real_ip_from 125.212.241.131;
 set_real_ip_from 125.253.56.119;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
-set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 131.72.79.38;
@@ -210,7 +209,6 @@ set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
-set_real_ip_from 178.17.170.218;
 set_real_ip_from 178.17.170.221;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
@@ -501,6 +499,8 @@ set_real_ip_from 190.123.46.170;
 set_real_ip_from 190.211.254.185;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.108.48.150;
+set_real_ip_from 192.121.44.26;
+set_real_ip_from 192.121.44.27;
 set_real_ip_from 192.159.99.162;
 set_real_ip_from 192.159.99.168;
 set_real_ip_from 192.159.99.74;
@@ -918,6 +918,7 @@ set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:39c1::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -1096,7 +1097,6 @@ set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
-set_real_ip_from 2a00:1dc0:caff:13a::9d2c;
 set_real_ip_from 2a00:1dc0:caff:13b::b74d;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:44::326d;
@@ -1209,6 +1209,8 @@ set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
+set_real_ip_from 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
+set_real_ip_from 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:80:1270::;
@@ -1545,6 +1547,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1791,7 +1794,6 @@ set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.208.139.110;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 85.93.31.31;
-set_real_ip_from 86.107.101.234;
 set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
