Update lists at 20251107-1801

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -132,6 +132,7 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -486,7 +487,6 @@ allow 2a0b:f4c2:1::185;
 allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
 allow 2a0b:f4c2:1::188;
-allow 2a0b:f4c2:1::189;
 allow 2a0b:f4c2::12;
 allow 2a0b:f4c2::13;
 allow 2a0b:f4c2::14;
