--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -378,7 +378,6 @@ allow 185.220.101.185;
 allow 185.220.101.186;
 allow 185.220.101.187;
 allow 185.220.101.188;
-allow 185.220.101.189;
 allow 185.220.101.19;
 allow 185.220.101.2;
 allow 185.220.101.20;
@@ -598,7 +597,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
-allow 198.167.206.229;
+allow 198.167.206.225;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -878,6 +877,7 @@ allow 23.191.200.27;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -916,6 +916,7 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1271,7 +1272,6 @@ allow 2a0b:f4c2:1::185;
 allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
 allow 2a0b:f4c2:1::188;
-allow 2a0b:f4c2:1::189;
 allow 2a0b:f4c2::12;
 allow 2a0b:f4c2::13;
 allow 2a0b:f4c2::14;
@@ -1544,6 +1544,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1772,6 +1773,8 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.181.104.22;
 allow 82.118.248.205;
+allow 82.153.138.125;
+allow 82.153.138.184;
 allow 82.153.138.241;
 allow 82.153.138.7;
 allow 82.197.182.161;
@@ -1844,6 +1847,7 @@ allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
+allow 94.156.152.234;
 allow 94.156.152.8;
 allow 94.16.115.121;
 allow 94.16.116.81;
