--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -378,7 +378,6 @@ deny 185.220.101.185;
 deny 185.220.101.186;
 deny 185.220.101.187;
 deny 185.220.101.188;
-deny 185.220.101.189;
 deny 185.220.101.19;
 deny 185.220.101.2;
 deny 185.220.101.20;
@@ -598,7 +597,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 196.196.200.100;
 deny 196.251.69.116;
-deny 198.167.206.229;
+deny 198.167.206.225;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -878,6 +877,7 @@ deny 23.191.200.27;
 deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
+deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
@@ -916,6 +916,7 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1271,7 +1272,6 @@ deny 2a0b:f4c2:1::185;
 deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
 deny 2a0b:f4c2:1::188;
-deny 2a0b:f4c2:1::189;
 deny 2a0b:f4c2::12;
 deny 2a0b:f4c2::13;
 deny 2a0b:f4c2::14;
@@ -1544,6 +1544,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1772,6 +1773,8 @@ deny 81.16.33.42;
 deny 81.17.28.95;
 deny 81.181.104.22;
 deny 82.118.248.205;
+deny 82.153.138.125;
+deny 82.153.138.184;
 deny 82.153.138.241;
 deny 82.153.138.7;
 deny 82.197.182.161;
@@ -1844,6 +1847,7 @@ deny 93.99.104.40;
 deny 94.102.51.15;
 deny 94.142.241.194;
 deny 94.142.244.16;
+deny 94.156.152.234;
 deny 94.156.152.8;
 deny 94.16.115.121;
 deny 94.16.116.81;
