--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -378,7 +378,6 @@ set_real_ip_from 185.220.101.185;
 set_real_ip_from 185.220.101.186;
 set_real_ip_from 185.220.101.187;
 set_real_ip_from 185.220.101.188;
-set_real_ip_from 185.220.101.189;
 set_real_ip_from 185.220.101.19;
 set_real_ip_from 185.220.101.2;
 set_real_ip_from 185.220.101.20;
@@ -598,7 +597,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
 set_real_ip_from 196.251.69.116;
-set_real_ip_from 198.167.206.229;
+set_real_ip_from 198.167.206.225;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -878,6 +877,7 @@ set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
@@ -916,6 +916,7 @@ set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:39c1::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -1271,7 +1272,6 @@ set_real_ip_from 2a0b:f4c2:1::185;
 set_real_ip_from 2a0b:f4c2:1::186;
 set_real_ip_from 2a0b:f4c2:1::187;
 set_real_ip_from 2a0b:f4c2:1::188;
-set_real_ip_from 2a0b:f4c2:1::189;
 set_real_ip_from 2a0b:f4c2::12;
 set_real_ip_from 2a0b:f4c2::13;
 set_real_ip_from 2a0b:f4c2::14;
@@ -1544,6 +1544,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1772,6 +1773,8 @@ set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
 set_real_ip_from 82.118.248.205;
+set_real_ip_from 82.153.138.125;
+set_real_ip_from 82.153.138.184;
 set_real_ip_from 82.153.138.241;
 set_real_ip_from 82.153.138.7;
 set_real_ip_from 82.197.182.161;
@@ -1844,6 +1847,7 @@ set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
+set_real_ip_from 94.156.152.234;
 set_real_ip_from 94.156.152.8;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
