--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -296,6 +296,7 @@ allow 185.193.52.180;
 allow 185.195.71.244;
 allow 185.207.107.130;
 allow 185.207.107.216;
+allow 185.208.159.233;
 allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
@@ -775,6 +776,7 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.182.75.199;
 allow 220.135.36.173;
+allow 23.129.180.155;
 allow 23.129.64.130;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -862,6 +864,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -876,6 +879,7 @@ allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -912,10 +916,12 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
+allow 2602:f7a3:0:d900::a;
 allow 2602:f915:f:3b43::1;
 allow 2602:fa59:5:915::1;
 allow 2602:fa86::be24:11ff:fe70:fc41;
@@ -1537,6 +1543,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1767,6 +1774,7 @@ allow 82.118.248.205;
 allow 82.153.138.125;
 allow 82.153.138.184;
 allow 82.153.138.241;
+allow 82.153.138.7;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
