--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -144,6 +144,7 @@ set_real_ip_from 152.53.150.12;
 set_real_ip_from 152.53.184.161;
 set_real_ip_from 152.53.210.165;
 set_real_ip_from 152.53.48.80;
+set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.205.129.174;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.53.58.161;
@@ -225,6 +226,7 @@ set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.133.50;
+set_real_ip_from 179.43.134.19;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
 set_real_ip_from 179.43.159.196;
@@ -762,6 +764,7 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
