--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -8,7 +8,6 @@ set_real_ip_from 103.146.203.11;
 set_real_ip_from 103.164.54.199;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
-set_real_ip_from 103.197.190.54;
 set_real_ip_from 103.20.241.102;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.253.24.18;
@@ -106,6 +105,7 @@ set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 124.198.131.108;
 set_real_ip_from 124.198.131.114;
+set_real_ip_from 124.198.131.133;
 set_real_ip_from 124.198.131.191;
 set_real_ip_from 124.198.131.223;
 set_real_ip_from 124.198.131.253;
@@ -148,7 +148,6 @@ set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.205.129.174;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.53.58.161;
-set_real_ip_from 154.90.54.69;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 160.187.148.71;
 set_real_ip_from 161.129.68.162;
@@ -874,6 +873,7 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
@@ -1439,6 +1439,7 @@ set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
+set_real_ip_from 2a12:a800:11:1:124:198:131:133;
 set_real_ip_from 2a12:a800:11:1:124:198:131:191;
 set_real_ip_from 2a12:a800:11:1:124:198:131:223;
 set_real_ip_from 2a12:a800:11:1:124:198:131:253;
@@ -1673,6 +1674,7 @@ set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.253.4.208;
 set_real_ip_from 46.29.238.25;
 set_real_ip_from 46.29.238.31;
+set_real_ip_from 47.254.153.161;
 set_real_ip_from 5.101.82.22;
 set_real_ip_from 5.104.84.183;
 set_real_ip_from 5.104.86.6;
@@ -1832,7 +1834,6 @@ set_real_ip_from 93.113.25.239;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.94.51.243;
 set_real_ip_from 93.95.227.37;
-set_real_ip_from 93.95.228.105;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
@@ -1854,7 +1855,6 @@ set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.104.135;
 set_real_ip_from 94.74.164.143;
 set_real_ip_from 94.74.164.89;
-set_real_ip_from 94.74.182.134;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
