Update lists at 20251108-1801

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -196,6 +196,7 @@ deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.121.177;
+deny 176.58.89.182;
 deny 176.65.132.187;
 deny 176.65.134.4;
 deny 176.65.148.133;
@@ -595,7 +596,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 196.196.200.100;
 deny 196.251.69.116;
-deny 198.167.206.225;
+deny 198.167.206.231;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -904,7 +905,6 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.93;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1210,6 +1210,7 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
+deny 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:80:1270::;
@@ -1743,7 +1744,6 @@ deny 66.78.40.225;
 deny 66.94.111.228;
 deny 67.219.109.141;
 deny 71.19.144.106;
-deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 72.5.43.62;
@@ -1855,6 +1855,7 @@ deny 94.72.103.33;
 deny 94.72.104.135;
 deny 94.74.164.143;
 deny 94.74.164.89;
+deny 94.74.182.134;
 deny 94.75.225.81;
 deny 95.128.43.164;
 deny 95.143.193.125;
