--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -196,6 +196,7 @@ allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.121.177;
+allow 176.58.89.182;
 allow 176.65.132.187;
 allow 176.65.134.4;
 allow 176.65.148.133;
@@ -595,7 +596,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
-allow 198.167.206.225;
+allow 198.167.206.231;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -904,7 +905,6 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1210,6 +1210,7 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
+allow 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:80:1270::;
@@ -1743,7 +1744,6 @@ allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
@@ -1855,6 +1855,7 @@ allow 94.72.103.33;
 allow 94.72.104.135;
 allow 94.74.164.143;
 allow 94.74.164.89;
+allow 94.74.182.134;
 allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
