--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -196,6 +196,7 @@ set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.121.177;
+set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.132.187;
 set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.148.133;
@@ -595,7 +596,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
 set_real_ip_from 196.251.69.116;
-set_real_ip_from 198.167.206.225;
+set_real_ip_from 198.167.206.231;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -904,7 +905,6 @@ set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.93;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
-set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1210,6 +1210,7 @@ set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
+set_real_ip_from 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:80:1270::;
@@ -1743,7 +1744,6 @@ set_real_ip_from 66.78.40.225;
 set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
-set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
@@ -1855,6 +1855,7 @@ set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.104.135;
 set_real_ip_from 94.74.164.143;
 set_real_ip_from 94.74.164.89;
+set_real_ip_from 94.74.182.134;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
