--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -579,6 +579,7 @@ allow 194.42.196.42;
 allow 194.53.137.156;
 allow 194.55.165.11;
 allow 194.55.167.14;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -593,7 +594,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
-allow 198.167.206.231;
+allow 198.167.206.153;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -624,7 +625,6 @@ allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
 allow 2001:41d0:1008:20d1::1;
-allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:305:2100::4ede;
@@ -913,6 +913,7 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1170,7 +1171,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
@@ -1209,6 +1209,7 @@ allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:80:1270::;
 allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
+allow 2a0b:4142:218::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1432,6 +1433,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:133;
@@ -1537,6 +1539,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1676,7 +1679,6 @@ allow 5.104.84.183;
 allow 5.104.86.6;
 allow 51.15.15.12;
 allow 51.15.59.15;
-allow 51.38.225.46;
 allow 51.68.226.107;
 allow 51.81.222.62;
 allow 51.91.18.151;
@@ -1781,7 +1783,6 @@ allow 82.221.139.190;
 allow 82.29.128.145;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.239.46.144;
@@ -1843,6 +1844,7 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.156.152.234;
 allow 94.156.152.8;
+allow 94.159.98.53;
 allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.121.91;
