Update lists at 20251110-0301

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -347,7 +347,6 @@ deny 185.220.101.143;
 deny 185.220.101.144;
 deny 185.220.101.145;
 deny 185.220.101.147;
-deny 185.220.101.149;
 deny 185.220.101.15;
 deny 185.220.101.152;
 deny 185.220.101.153;
@@ -370,7 +369,6 @@ deny 185.220.101.175;
 deny 185.220.101.176;
 deny 185.220.101.179;
 deny 185.220.101.18;
-deny 185.220.101.180;
 deny 185.220.101.182;
 deny 185.220.101.183;
 deny 185.220.101.185;
@@ -1160,6 +1158,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1172,6 +1171,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:9b85:500::58;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
@@ -1244,7 +1244,6 @@ deny 2a0b:f4c2:1::143;
 deny 2a0b:f4c2:1::144;
 deny 2a0b:f4c2:1::145;
 deny 2a0b:f4c2:1::147;
-deny 2a0b:f4c2:1::149;
 deny 2a0b:f4c2:1::152;
 deny 2a0b:f4c2:1::153;
 deny 2a0b:f4c2:1::154;
@@ -1263,7 +1262,6 @@ deny 2a0b:f4c2:1::174;
 deny 2a0b:f4c2:1::175;
 deny 2a0b:f4c2:1::176;
 deny 2a0b:f4c2:1::179;
-deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
 deny 2a0b:f4c2:1::185;
@@ -1685,6 +1683,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1783,6 +1782,7 @@ deny 82.221.139.190;
 deny 82.29.128.145;
 deny 83.217.9.73;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.239.46.144;
