--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -376,6 +376,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -388,6 +389,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
@@ -460,7 +462,6 @@ allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::144;
 allow 2a0b:f4c2:1::145;
 allow 2a0b:f4c2:1::147;
-allow 2a0b:f4c2:1::149;
 allow 2a0b:f4c2:1::152;
 allow 2a0b:f4c2:1::153;
 allow 2a0b:f4c2:1::154;
@@ -479,7 +480,6 @@ allow 2a0b:f4c2:1::174;
 allow 2a0b:f4c2:1::175;
 allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::179;
-allow 2a0b:f4c2:1::180;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
 allow 2a0b:f4c2:1::185;
