--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -193,13 +193,13 @@ allow 173.224.219.236;
 allow 173.224.219.44;
 allow 173.255.198.243;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.132.187;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
-allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
@@ -869,7 +869,7 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.3;
+allow 23.191.200.29;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
@@ -910,6 +910,7 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1172,7 +1173,6 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
-allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
@@ -1407,7 +1407,6 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7::216:3cff:fe6f:c4ca;
 allow 2a0e:bfc7::216:3cff:fe98:45cb;
-allow 2a0e:bfc7::216:3cff:fece:19ec;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:16a4::1;
@@ -1468,7 +1467,6 @@ allow 2a12:a800:2:1:45:138:16:239;
 allow 2a12:a800:2:1:45:138:16:240;
 allow 2a12:a800:2:1:45:138:16:248;
 allow 2a12:a800:2:1:45:138:16:42;
-allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
@@ -1535,6 +1533,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1580,7 +1579,6 @@ allow 45.138.16.239;
 allow 45.138.16.240;
 allow 45.138.16.248;
 allow 45.138.16.42;
-allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.141.119.15;
 allow 45.141.119.29;
@@ -1650,7 +1648,6 @@ allow 45.91.250.107;
 allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.156.105;
-allow 45.9.156.161;
 allow 45.9.156.22;
 allow 45.9.168.192;
 allow 45.94.31.68;
