--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -193,13 +193,13 @@ deny 173.224.219.236;
 deny 173.224.219.44;
 deny 173.255.198.243;
 deny 176.118.193.33;
+deny 176.121.81.51;
 deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.65.132.187;
 deny 176.65.134.4;
 deny 176.65.148.133;
 deny 176.65.148.3;
-deny 176.65.149.100;
 deny 176.65.149.105;
 deny 176.65.149.84;
 deny 176.65.149.87;
@@ -869,7 +869,7 @@ deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
-deny 23.191.200.3;
+deny 23.191.200.29;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
@@ -910,6 +910,7 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1172,7 +1173,6 @@ deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
-deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
@@ -1407,7 +1407,6 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7::216:3cff:fe6f:c4ca;
 deny 2a0e:bfc7::216:3cff:fe98:45cb;
-deny 2a0e:bfc7::216:3cff:fece:19ec;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:16a4::1;
@@ -1468,7 +1467,6 @@ deny 2a12:a800:2:1:45:138:16:239;
 deny 2a12:a800:2:1:45:138:16:240;
 deny 2a12:a800:2:1:45:138:16:248;
 deny 2a12:a800:2:1:45:138:16:42;
-deny 2a12:a800:2:1:45:138:16:69;
 deny 2a12:a800:2:1:45:138:16:76;
 deny 2a12:a800:2:1:45:141:215:110;
 deny 2a12:a800:2:1:45:141:215:111;
@@ -1535,6 +1533,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1580,7 +1579,6 @@ deny 45.138.16.239;
 deny 45.138.16.240;
 deny 45.138.16.248;
 deny 45.138.16.42;
-deny 45.138.16.69;
 deny 45.138.16.76;
 deny 45.141.119.15;
 deny 45.141.119.29;
@@ -1650,7 +1648,6 @@ deny 45.91.250.107;
 deny 45.9.148.50;
 deny 45.9.156.101;
 deny 45.9.156.105;
-deny 45.9.156.161;
 deny 45.9.156.22;
 deny 45.9.168.192;
 deny 45.94.31.68;
