Update lists at 20251111-0001

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -478,6 +478,7 @@ set_real_ip_from 185.40.4.20;
 set_real_ip_from 185.40.4.22;
 set_real_ip_from 185.40.4.29;
 set_real_ip_from 185.40.4.38;
+set_real_ip_from 185.40.4.44;
 set_real_ip_from 185.40.4.64;
 set_real_ip_from 185.40.4.92;
 set_real_ip_from 185.42.170.203;
@@ -862,7 +863,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -871,7 +871,6 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
@@ -1204,6 +1203,7 @@ set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
+set_real_ip_from 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:80:1270::;
@@ -1385,6 +1385,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:20;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:22;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:29;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:38;
+set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:44;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
@@ -1411,6 +1412,7 @@ set_real_ip_from 2a0e:bfc7::216:3cff:fe98:45cb;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:16a4::1;
+set_real_ip_from 2a0f:85c1:356:1b63::1;
 set_real_ip_from 2a0f:85c1:356:5c50::1;
 set_real_ip_from 2a0f:85c1:8d2:c2e8::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
@@ -1609,6 +1611,7 @@ set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.15.140.245;
 set_real_ip_from 45.154.98.33;
 set_real_ip_from 45.38.20.153;
+set_real_ip_from 45.38.20.240;
 set_real_ip_from 45.58.190.74;
 set_real_ip_from 45.61.184.51;
 set_real_ip_from 45.61.185.172;
@@ -1847,7 +1850,6 @@ set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.104.135;
-set_real_ip_from 94.74.164.89;
 set_real_ip_from 94.74.182.134;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
