--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -478,6 +478,7 @@ allow 185.40.4.20;
 allow 185.40.4.22;
 allow 185.40.4.29;
 allow 185.40.4.38;
+allow 185.40.4.44;
 allow 185.40.4.64;
 allow 185.40.4.92;
 allow 185.42.170.203;
@@ -862,7 +863,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -871,7 +871,6 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -1204,6 +1203,7 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
+allow 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:80:1270::;
@@ -1385,6 +1385,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:20;
 allow 2a0e:4005:1002:ffff:185:40:4:22;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
+allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
@@ -1411,6 +1412,7 @@ allow 2a0e:bfc7::216:3cff:fe98:45cb;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:16a4::1;
+allow 2a0f:85c1:356:1b63::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:8d2:c2e8::1;
 allow 2a0f:cdc6:500:11e3::2;
@@ -1609,6 +1611,7 @@ allow 45.148.10.111;
 allow 45.15.140.245;
 allow 45.154.98.33;
 allow 45.38.20.153;
+allow 45.38.20.240;
 allow 45.58.190.74;
 allow 45.61.184.51;
 allow 45.61.185.172;
@@ -1847,7 +1850,6 @@ allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
 allow 94.72.104.135;
-allow 94.74.164.89;
 allow 94.74.182.134;
 allow 94.75.225.81;
 allow 95.128.43.164;
