--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -421,6 +421,7 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
+allow 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:80:1270::;
@@ -602,6 +603,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:20;
 allow 2a0e:4005:1002:ffff:185:40:4:22;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
+allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
@@ -628,6 +630,7 @@ allow 2a0e:bfc7::216:3cff:fe98:45cb;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:16a4::1;
+allow 2a0f:85c1:356:1b63::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:8d2:c2e8::1;
 allow 2a0f:cdc6:500:11e3::2;
