Update lists at 20251111-0901

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -119,7 +119,6 @@ allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
-allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -133,6 +132,7 @@ allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
 allow 2602:f6f6:2:ad5c::1;
+allow 2602:f6f6:2:bab9::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
