--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -121,8 +121,6 @@ allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
 allow 131.72.79.38;
-allow 13.211.203.175;
-allow 13.236.117.199;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -873,11 +871,9 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -901,7 +897,6 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
-allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -915,6 +910,7 @@ allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
 allow 2602:f6f6:2:ad5c::1;
+allow 2602:f6f6:2:bab9::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
@@ -1519,7 +1515,6 @@ allow 31.184.236.104;
 allow 31.220.75.237;
 allow 31.40.204.186;
 allow 31.44.238.25;
-allow 3.27.198.47;
 allow 35.0.127.52;
 allow 37.114.50.124;
 allow 37.114.50.142;
@@ -1705,7 +1700,6 @@ allow 5.255.98.23;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
-allow 52.62.107.28;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
