--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -121,8 +121,6 @@ deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.15.186;
 deny 131.72.79.38;
-deny 13.211.203.175;
-deny 13.236.117.199;
 deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
@@ -873,11 +871,9 @@ deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
-deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
-deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -901,7 +897,6 @@ deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.93;
-deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
@@ -915,6 +910,7 @@ deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
 deny 2602:f6f6:2:ad5c::1;
+deny 2602:f6f6:2:bab9::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
@@ -1519,7 +1515,6 @@ deny 31.184.236.104;
 deny 31.220.75.237;
 deny 31.40.204.186;
 deny 31.44.238.25;
-deny 3.27.198.47;
 deny 35.0.127.52;
 deny 37.114.50.124;
 deny 37.114.50.142;
@@ -1705,7 +1700,6 @@ deny 5.255.98.23;
 deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
-deny 52.62.107.28;
 deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
