Update lists at 20251111-1201

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -131,6 +131,7 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:bab9::1;
 deny 2602:f6f6:2:cf34::1;
@@ -261,6 +262,37 @@ deny 2620:18c:0:192::e0:158;
 deny 2620:18c:0:192::e0:159;
 deny 2620:18c:0:192::e0:160;
 deny 2620:18c:0:192::e0:161;
+deny 2620:18c:0:192::e0:162;
+deny 2620:18c:0:192::e0:163;
+deny 2620:18c:0:192::e0:164;
+deny 2620:18c:0:192::e0:165;
+deny 2620:18c:0:192::e0:166;
+deny 2620:18c:0:192::e0:167;
+deny 2620:18c:0:192::e0:168;
+deny 2620:18c:0:192::e0:169;
+deny 2620:18c:0:192::e0:170;
+deny 2620:18c:0:192::e0:171;
+deny 2620:18c:0:192::e0:172;
+deny 2620:18c:0:192::e0:173;
+deny 2620:18c:0:192::e0:174;
+deny 2620:18c:0:192::e0:175;
+deny 2620:18c:0:192::e0:176;
+deny 2620:18c:0:192::e0:177;
+deny 2620:18c:0:192::e0:178;
+deny 2620:18c:0:192::e0:179;
+deny 2620:18c:0:192::e0:180;
+deny 2620:18c:0:192::e0:181;
+deny 2620:18c:0:192::e0:182;
+deny 2620:18c:0:192::e0:183;
+deny 2620:18c:0:192::e0:184;
+deny 2620:18c:0:192::e0:185;
+deny 2620:18c:0:192::e0:186;
+deny 2620:18c:0:192::e0:187;
+deny 2620:18c:0:192::e0:188;
+deny 2620:18c:0:192::e0:189;
+deny 2620:18c:0:192::e0:191;
+deny 2620:18c:0:192::e0:192;
+deny 2620:18c:0:192::e0:193;
 deny 2620:18c:0:192::e0:194;
 deny 2620:18c:0:192::e0:195;
 deny 2620:18c:0:192::e0:196;
@@ -420,7 +452,6 @@ deny 2a07:e042:1:182::1;
 deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
-deny 2a09:61c0::beef;
 deny 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
