--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -207,6 +207,7 @@ allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
+allow 178.17.170.223;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -806,6 +807,37 @@ allow 23.129.64.158;
 allow 23.129.64.159;
 allow 23.129.64.160;
 allow 23.129.64.161;
+allow 23.129.64.162;
+allow 23.129.64.163;
+allow 23.129.64.164;
+allow 23.129.64.165;
+allow 23.129.64.166;
+allow 23.129.64.167;
+allow 23.129.64.168;
+allow 23.129.64.169;
+allow 23.129.64.170;
+allow 23.129.64.171;
+allow 23.129.64.172;
+allow 23.129.64.173;
+allow 23.129.64.174;
+allow 23.129.64.175;
+allow 23.129.64.176;
+allow 23.129.64.177;
+allow 23.129.64.178;
+allow 23.129.64.179;
+allow 23.129.64.180;
+allow 23.129.64.181;
+allow 23.129.64.182;
+allow 23.129.64.183;
+allow 23.129.64.184;
+allow 23.129.64.185;
+allow 23.129.64.186;
+allow 23.129.64.187;
+allow 23.129.64.188;
+allow 23.129.64.189;
+allow 23.129.64.191;
+allow 23.129.64.192;
+allow 23.129.64.193;
 allow 23.129.64.194;
 allow 23.129.64.195;
 allow 23.129.64.196;
@@ -869,11 +901,11 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
-allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -909,6 +941,7 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:bab9::1;
 allow 2602:f6f6:2:cf34::1;
@@ -1039,6 +1072,37 @@ allow 2620:18c:0:192::e0:158;
 allow 2620:18c:0:192::e0:159;
 allow 2620:18c:0:192::e0:160;
 allow 2620:18c:0:192::e0:161;
+allow 2620:18c:0:192::e0:162;
+allow 2620:18c:0:192::e0:163;
+allow 2620:18c:0:192::e0:164;
+allow 2620:18c:0:192::e0:165;
+allow 2620:18c:0:192::e0:166;
+allow 2620:18c:0:192::e0:167;
+allow 2620:18c:0:192::e0:168;
+allow 2620:18c:0:192::e0:169;
+allow 2620:18c:0:192::e0:170;
+allow 2620:18c:0:192::e0:171;
+allow 2620:18c:0:192::e0:172;
+allow 2620:18c:0:192::e0:173;
+allow 2620:18c:0:192::e0:174;
+allow 2620:18c:0:192::e0:175;
+allow 2620:18c:0:192::e0:176;
+allow 2620:18c:0:192::e0:177;
+allow 2620:18c:0:192::e0:178;
+allow 2620:18c:0:192::e0:179;
+allow 2620:18c:0:192::e0:180;
+allow 2620:18c:0:192::e0:181;
+allow 2620:18c:0:192::e0:182;
+allow 2620:18c:0:192::e0:183;
+allow 2620:18c:0:192::e0:184;
+allow 2620:18c:0:192::e0:185;
+allow 2620:18c:0:192::e0:186;
+allow 2620:18c:0:192::e0:187;
+allow 2620:18c:0:192::e0:188;
+allow 2620:18c:0:192::e0:189;
+allow 2620:18c:0:192::e0:191;
+allow 2620:18c:0:192::e0:192;
+allow 2620:18c:0:192::e0:193;
 allow 2620:18c:0:192::e0:194;
 allow 2620:18c:0:192::e0:195;
 allow 2620:18c:0:192::e0:196;
@@ -1199,7 +1263,6 @@ allow 2a07:e042:1:182::1;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
-allow 2a09:61c0::beef;
 allow 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
@@ -1532,6 +1595,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1659,6 +1723,7 @@ allow 46.165.193.216;
 allow 46.165.243.36;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.246.96.123;
 allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.29.238.25;
@@ -1759,6 +1824,7 @@ allow 80.94.92.99;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.181.104.22;
+allow 8.211.148.167;
 allow 82.118.248.205;
 allow 82.153.138.125;
 allow 82.153.138.184;
@@ -1852,5 +1918,6 @@ allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
+allow 96.8.119.172;
 allow 97.90.239.170;
 allow 98.128.173.33;
