--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -207,6 +207,7 @@ set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
+set_real_ip_from 178.17.170.223;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
@@ -806,6 +807,37 @@ set_real_ip_from 23.129.64.158;
 set_real_ip_from 23.129.64.159;
 set_real_ip_from 23.129.64.160;
 set_real_ip_from 23.129.64.161;
+set_real_ip_from 23.129.64.162;
+set_real_ip_from 23.129.64.163;
+set_real_ip_from 23.129.64.164;
+set_real_ip_from 23.129.64.165;
+set_real_ip_from 23.129.64.166;
+set_real_ip_from 23.129.64.167;
+set_real_ip_from 23.129.64.168;
+set_real_ip_from 23.129.64.169;
+set_real_ip_from 23.129.64.170;
+set_real_ip_from 23.129.64.171;
+set_real_ip_from 23.129.64.172;
+set_real_ip_from 23.129.64.173;
+set_real_ip_from 23.129.64.174;
+set_real_ip_from 23.129.64.175;
+set_real_ip_from 23.129.64.176;
+set_real_ip_from 23.129.64.177;
+set_real_ip_from 23.129.64.178;
+set_real_ip_from 23.129.64.179;
+set_real_ip_from 23.129.64.180;
+set_real_ip_from 23.129.64.181;
+set_real_ip_from 23.129.64.182;
+set_real_ip_from 23.129.64.183;
+set_real_ip_from 23.129.64.184;
+set_real_ip_from 23.129.64.185;
+set_real_ip_from 23.129.64.186;
+set_real_ip_from 23.129.64.187;
+set_real_ip_from 23.129.64.188;
+set_real_ip_from 23.129.64.189;
+set_real_ip_from 23.129.64.191;
+set_real_ip_from 23.129.64.192;
+set_real_ip_from 23.129.64.193;
 set_real_ip_from 23.129.64.194;
 set_real_ip_from 23.129.64.195;
 set_real_ip_from 23.129.64.196;
@@ -869,11 +901,11 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -909,6 +941,7 @@ set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:39c1::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:bab9::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
@@ -1039,6 +1072,37 @@ set_real_ip_from 2620:18c:0:192::e0:158;
 set_real_ip_from 2620:18c:0:192::e0:159;
 set_real_ip_from 2620:18c:0:192::e0:160;
 set_real_ip_from 2620:18c:0:192::e0:161;
+set_real_ip_from 2620:18c:0:192::e0:162;
+set_real_ip_from 2620:18c:0:192::e0:163;
+set_real_ip_from 2620:18c:0:192::e0:164;
+set_real_ip_from 2620:18c:0:192::e0:165;
+set_real_ip_from 2620:18c:0:192::e0:166;
+set_real_ip_from 2620:18c:0:192::e0:167;
+set_real_ip_from 2620:18c:0:192::e0:168;
+set_real_ip_from 2620:18c:0:192::e0:169;
+set_real_ip_from 2620:18c:0:192::e0:170;
+set_real_ip_from 2620:18c:0:192::e0:171;
+set_real_ip_from 2620:18c:0:192::e0:172;
+set_real_ip_from 2620:18c:0:192::e0:173;
+set_real_ip_from 2620:18c:0:192::e0:174;
+set_real_ip_from 2620:18c:0:192::e0:175;
+set_real_ip_from 2620:18c:0:192::e0:176;
+set_real_ip_from 2620:18c:0:192::e0:177;
+set_real_ip_from 2620:18c:0:192::e0:178;
+set_real_ip_from 2620:18c:0:192::e0:179;
+set_real_ip_from 2620:18c:0:192::e0:180;
+set_real_ip_from 2620:18c:0:192::e0:181;
+set_real_ip_from 2620:18c:0:192::e0:182;
+set_real_ip_from 2620:18c:0:192::e0:183;
+set_real_ip_from 2620:18c:0:192::e0:184;
+set_real_ip_from 2620:18c:0:192::e0:185;
+set_real_ip_from 2620:18c:0:192::e0:186;
+set_real_ip_from 2620:18c:0:192::e0:187;
+set_real_ip_from 2620:18c:0:192::e0:188;
+set_real_ip_from 2620:18c:0:192::e0:189;
+set_real_ip_from 2620:18c:0:192::e0:191;
+set_real_ip_from 2620:18c:0:192::e0:192;
+set_real_ip_from 2620:18c:0:192::e0:193;
 set_real_ip_from 2620:18c:0:192::e0:194;
 set_real_ip_from 2620:18c:0:192::e0:195;
 set_real_ip_from 2620:18c:0:192::e0:196;
@@ -1199,7 +1263,6 @@ set_real_ip_from 2a07:e042:1:182::1;
 set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
-set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
@@ -1532,6 +1595,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1659,6 +1723,7 @@ set_real_ip_from 46.165.193.216;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
+set_real_ip_from 46.246.96.123;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.253.4.208;
 set_real_ip_from 46.29.238.25;
@@ -1759,6 +1824,7 @@ set_real_ip_from 80.94.92.99;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
+set_real_ip_from 8.211.148.167;
 set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.153.138.125;
 set_real_ip_from 82.153.138.184;
@@ -1852,5 +1918,6 @@ set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
+set_real_ip_from 96.8.119.172;
 set_real_ip_from 97.90.239.170;
 set_real_ip_from 98.128.173.33;
