--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -131,6 +131,7 @@ set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:39c1::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:bab9::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
@@ -261,6 +262,37 @@ set_real_ip_from 2620:18c:0:192::e0:158;
 set_real_ip_from 2620:18c:0:192::e0:159;
 set_real_ip_from 2620:18c:0:192::e0:160;
 set_real_ip_from 2620:18c:0:192::e0:161;
+set_real_ip_from 2620:18c:0:192::e0:162;
+set_real_ip_from 2620:18c:0:192::e0:163;
+set_real_ip_from 2620:18c:0:192::e0:164;
+set_real_ip_from 2620:18c:0:192::e0:165;
+set_real_ip_from 2620:18c:0:192::e0:166;
+set_real_ip_from 2620:18c:0:192::e0:167;
+set_real_ip_from 2620:18c:0:192::e0:168;
+set_real_ip_from 2620:18c:0:192::e0:169;
+set_real_ip_from 2620:18c:0:192::e0:170;
+set_real_ip_from 2620:18c:0:192::e0:171;
+set_real_ip_from 2620:18c:0:192::e0:172;
+set_real_ip_from 2620:18c:0:192::e0:173;
+set_real_ip_from 2620:18c:0:192::e0:174;
+set_real_ip_from 2620:18c:0:192::e0:175;
+set_real_ip_from 2620:18c:0:192::e0:176;
+set_real_ip_from 2620:18c:0:192::e0:177;
+set_real_ip_from 2620:18c:0:192::e0:178;
+set_real_ip_from 2620:18c:0:192::e0:179;
+set_real_ip_from 2620:18c:0:192::e0:180;
+set_real_ip_from 2620:18c:0:192::e0:181;
+set_real_ip_from 2620:18c:0:192::e0:182;
+set_real_ip_from 2620:18c:0:192::e0:183;
+set_real_ip_from 2620:18c:0:192::e0:184;
+set_real_ip_from 2620:18c:0:192::e0:185;
+set_real_ip_from 2620:18c:0:192::e0:186;
+set_real_ip_from 2620:18c:0:192::e0:187;
+set_real_ip_from 2620:18c:0:192::e0:188;
+set_real_ip_from 2620:18c:0:192::e0:189;
+set_real_ip_from 2620:18c:0:192::e0:191;
+set_real_ip_from 2620:18c:0:192::e0:192;
+set_real_ip_from 2620:18c:0:192::e0:193;
 set_real_ip_from 2620:18c:0:192::e0:194;
 set_real_ip_from 2620:18c:0:192::e0:195;
 set_real_ip_from 2620:18c:0:192::e0:196;
@@ -420,7 +452,6 @@ set_real_ip_from 2a07:e042:1:182::1;
 set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
-set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
