Update lists at 20251111-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -835,6 +835,7 @@ allow 23.129.64.186;
 allow 23.129.64.187;
 allow 23.129.64.188;
 allow 23.129.64.189;
+allow 23.129.64.190;
 allow 23.129.64.191;
 allow 23.129.64.192;
 allow 23.129.64.193;
@@ -901,6 +902,8 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1100,6 +1103,7 @@ allow 2620:18c:0:192::e0:186;
 allow 2620:18c:0:192::e0:187;
 allow 2620:18c:0:192::e0:188;
 allow 2620:18c:0:192::e0:189;
+allow 2620:18c:0:192::e0:190;
 allow 2620:18c:0:192::e0:191;
 allow 2620:18c:0:192::e0:192;
 allow 2620:18c:0:192::e0:193;
@@ -1147,7 +1151,6 @@ allow 2a00:11c0:47:1e7e::;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1826,8 +1829,6 @@ allow 81.17.28.95;
 allow 81.181.104.22;
 allow 8.211.148.167;
 allow 82.118.248.205;
-allow 82.153.138.125;
-allow 82.153.138.184;
 allow 82.153.138.241;
 allow 82.153.138.57;
 allow 82.153.138.7;
@@ -1856,7 +1857,6 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
-allow 87.120.254.132;
 allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
@@ -1901,7 +1901,6 @@ allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
-allow 94.156.152.234;
 allow 94.156.152.8;
 allow 94.159.98.53;
 allow 94.16.115.121;
