--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -290,6 +290,7 @@ deny 2620:18c:0:192::e0:186;
 deny 2620:18c:0:192::e0:187;
 deny 2620:18c:0:192::e0:188;
 deny 2620:18c:0:192::e0:189;
+deny 2620:18c:0:192::e0:190;
 deny 2620:18c:0:192::e0:191;
 deny 2620:18c:0:192::e0:192;
 deny 2620:18c:0:192::e0:193;
@@ -336,7 +337,6 @@ deny 2a00:11c0:47:1e7e::;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
-deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
