--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -835,6 +835,7 @@ set_real_ip_from 23.129.64.186;
 set_real_ip_from 23.129.64.187;
 set_real_ip_from 23.129.64.188;
 set_real_ip_from 23.129.64.189;
+set_real_ip_from 23.129.64.190;
 set_real_ip_from 23.129.64.191;
 set_real_ip_from 23.129.64.192;
 set_real_ip_from 23.129.64.193;
@@ -901,6 +902,8 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
@@ -1100,6 +1103,7 @@ set_real_ip_from 2620:18c:0:192::e0:186;
 set_real_ip_from 2620:18c:0:192::e0:187;
 set_real_ip_from 2620:18c:0:192::e0:188;
 set_real_ip_from 2620:18c:0:192::e0:189;
+set_real_ip_from 2620:18c:0:192::e0:190;
 set_real_ip_from 2620:18c:0:192::e0:191;
 set_real_ip_from 2620:18c:0:192::e0:192;
 set_real_ip_from 2620:18c:0:192::e0:193;
@@ -1147,7 +1151,6 @@ set_real_ip_from 2a00:11c0:47:1e7e::;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
-set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1826,8 +1829,6 @@ set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
 set_real_ip_from 8.211.148.167;
 set_real_ip_from 82.118.248.205;
-set_real_ip_from 82.153.138.125;
-set_real_ip_from 82.153.138.184;
 set_real_ip_from 82.153.138.241;
 set_real_ip_from 82.153.138.57;
 set_real_ip_from 82.153.138.7;
@@ -1856,7 +1857,6 @@ set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.222.33;
-set_real_ip_from 87.120.254.132;
 set_real_ip_from 87.121.79.55;
 set_real_ip_from 88.151.192.2;
 set_real_ip_from 88.80.20.86;
@@ -1901,7 +1901,6 @@ set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
-set_real_ip_from 94.156.152.234;
 set_real_ip_from 94.156.152.8;
 set_real_ip_from 94.159.98.53;
 set_real_ip_from 94.16.115.121;
