Update lists at 20251112-1201

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -454,6 +454,7 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
+deny 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:80:1270::;
