--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -875,6 +875,7 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
+allow 23.137.252.225;
 allow 23.137.253.254;
 allow 23.137.254.244;
 allow 23.137.255.85;
@@ -1268,6 +1269,7 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
+allow 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:80:1270::;
@@ -1770,7 +1772,6 @@ allow 5.45.98.162;
 allow 57.128.212.103;
 allow 57.128.220.107;
 allow 57.129.91.235;
-allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.133.60.208;
 allow 62.171.137.169;
@@ -1797,7 +1798,6 @@ allow 72.235.129.116;
 allow 72.5.43.62;
 allow 74.208.79.7;
 allow 74.82.47.194;
-allow 77.105.128.170;
 allow 77.239.97.46;
 allow 77.48.28.193;
 allow 77.48.28.204;
@@ -1902,7 +1902,6 @@ allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
 allow 94.72.104.135;
-allow 94.74.182.134;
 allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
