--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -875,6 +875,7 @@ deny 23.129.64.225;
 deny 23.129.64.99;
 deny 23.137.105.248;
 deny 23.137.248.100;
+deny 23.137.252.225;
 deny 23.137.253.254;
 deny 23.137.254.244;
 deny 23.137.255.85;
@@ -1268,6 +1269,7 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
+deny 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:80:1270::;
@@ -1770,7 +1772,6 @@ deny 5.45.98.162;
 deny 57.128.212.103;
 deny 57.128.220.107;
 deny 57.129.91.235;
-deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.133.60.208;
 deny 62.171.137.169;
@@ -1797,7 +1798,6 @@ deny 72.235.129.116;
 deny 72.5.43.62;
 deny 74.208.79.7;
 deny 74.82.47.194;
-deny 77.105.128.170;
 deny 77.239.97.46;
 deny 77.48.28.193;
 deny 77.48.28.204;
@@ -1902,7 +1902,6 @@ deny 94.230.208.147;
 deny 94.230.208.148;
 deny 94.72.103.33;
 deny 94.72.104.135;
-deny 94.74.182.134;
 deny 94.75.225.81;
 deny 95.128.43.164;
 deny 95.143.193.125;
