--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -875,6 +875,7 @@ set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.105.248;
 set_real_ip_from 23.137.248.100;
+set_real_ip_from 23.137.252.225;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.254.244;
 set_real_ip_from 23.137.255.85;
@@ -1268,6 +1269,7 @@ set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
+set_real_ip_from 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:80:1270::;
@@ -1770,7 +1772,6 @@ set_real_ip_from 5.45.98.162;
 set_real_ip_from 57.128.212.103;
 set_real_ip_from 57.128.220.107;
 set_real_ip_from 57.129.91.235;
-set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.133.60.208;
 set_real_ip_from 62.171.137.169;
@@ -1797,7 +1798,6 @@ set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
 set_real_ip_from 74.208.79.7;
 set_real_ip_from 74.82.47.194;
-set_real_ip_from 77.105.128.170;
 set_real_ip_from 77.239.97.46;
 set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
@@ -1902,7 +1902,6 @@ set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.104.135;
-set_real_ip_from 94.74.182.134;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
