Update lists at 20251112-2101

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -422,6 +422,7 @@ allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
+allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
@@ -681,7 +682,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:133;
@@ -742,6 +742,7 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:53;
 allow 2a12:a800:2:1:45:80:158:75;
 allow 2a12:a800:2:1:45:80:158:93;
+allow 2a12:a800:2:1:91:206:169:29;
 allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:123;
 allow 2a12:a800:9:1:193:26:115:140;
