Update lists at 20251113-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,7 +101,6 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
 allow 118.163.74.160;
-allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
 allow 124.198.131.114;
@@ -115,6 +114,7 @@ allow 124.198.132.13;
 allow 124.198.132.172;
 allow 124.198.132.237;
 allow 124.198.132.52;
+allow 125.212.241.131;
 allow 125.253.56.119;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -800,7 +800,6 @@ allow 23.129.64.147;
 allow 23.129.64.148;
 allow 23.129.64.149;
 allow 23.129.64.150;
-allow 23.129.64.151;
 allow 23.129.64.152;
 allow 23.129.64.153;
 allow 23.129.64.154;
@@ -896,6 +895,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -947,7 +947,6 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:bab9::1;
 allow 2602:f6f6:2:cf34::1;
@@ -1067,7 +1066,6 @@ allow 2620:18c:0:192::e0:147;
 allow 2620:18c:0:192::e0:148;
 allow 2620:18c:0:192::e0:149;
 allow 2620:18c:0:192::e0:150;
-allow 2620:18c:0:192::e0:151;
 allow 2620:18c:0:192::e0:152;
 allow 2620:18c:0:192::e0:153;
 allow 2620:18c:0:192::e0:154;
@@ -1421,6 +1419,7 @@ allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
+allow 2a0c:9f00:2:12fa::1;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:6c2:6:615::;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
@@ -1576,6 +1575,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:3085::4f2;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
 allow 2a14:c380:50:62::a;
@@ -1603,7 +1603,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1633,6 +1632,7 @@ allow 45.133.73.14;
 allow 45.133.73.63;
 allow 45.133.74.53;
 allow 45.134.225.36;
+allow 45.134.48.153;
 allow 45.137.201.26;
 allow 45.137.201.31;
 allow 45.137.201.55;
@@ -1848,6 +1848,7 @@ allow 83.217.9.73;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
+allow 84.200.192.203;
 allow 84.239.46.144;
 allow 85.208.139.110;
 allow 85.93.218.204;
@@ -1860,6 +1861,7 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
+allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
