--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -101,7 +101,6 @@ deny 109.71.252.88;
 deny 109.71.252.97;
 deny 114.35.245.150;
 deny 118.163.74.160;
-deny 121.78.28.166;
 deny 123.253.35.32;
 deny 124.198.131.108;
 deny 124.198.131.114;
@@ -115,6 +114,7 @@ deny 124.198.132.13;
 deny 124.198.132.172;
 deny 124.198.132.237;
 deny 124.198.132.52;
+deny 125.212.241.131;
 deny 125.253.56.119;
 deny 128.127.180.156;
 deny 128.31.0.13;
@@ -800,7 +800,6 @@ deny 23.129.64.147;
 deny 23.129.64.148;
 deny 23.129.64.149;
 deny 23.129.64.150;
-deny 23.129.64.151;
 deny 23.129.64.152;
 deny 23.129.64.153;
 deny 23.129.64.154;
@@ -896,6 +895,7 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
+deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -947,7 +947,6 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
-deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:bab9::1;
 deny 2602:f6f6:2:cf34::1;
@@ -1067,7 +1066,6 @@ deny 2620:18c:0:192::e0:147;
 deny 2620:18c:0:192::e0:148;
 deny 2620:18c:0:192::e0:149;
 deny 2620:18c:0:192::e0:150;
-deny 2620:18c:0:192::e0:151;
 deny 2620:18c:0:192::e0:152;
 deny 2620:18c:0:192::e0:153;
 deny 2620:18c:0:192::e0:154;
@@ -1421,6 +1419,7 @@ deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
+deny 2a0c:9f00:2:12fa::1;
 deny 2a0c:e300:b:b::b;
 deny 2a0d:6c2:6:615::;
 deny 2a0d:bbc7::f816:3eff:fe0b:181b;
@@ -1576,6 +1575,7 @@ deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:3085::4f2;
 deny 2a14:7583:f607::;
+deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:20::a;
 deny 2a14:c380:50:60::a;
 deny 2a14:c380:50:62::a;
@@ -1603,7 +1603,6 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1633,6 +1632,7 @@ deny 45.133.73.14;
 deny 45.133.73.63;
 deny 45.133.74.53;
 deny 45.134.225.36;
+deny 45.134.48.153;
 deny 45.137.201.26;
 deny 45.137.201.31;
 deny 45.137.201.55;
@@ -1848,6 +1848,7 @@ deny 83.217.9.73;
 deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
+deny 84.200.192.203;
 deny 84.239.46.144;
 deny 85.208.139.110;
 deny 85.93.218.204;
@@ -1860,6 +1861,7 @@ deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.222.33;
+deny 87.121.79.55;
 deny 88.151.192.2;
 deny 88.80.20.86;
 deny 88.80.26.2;
